--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
 body{
-    background-image: linear-gradient(45deg, #fefefe5e, rgba(255, 255, 255, 0.663)), url('bgcover.avif'); background-size: cover; background-position: center!important;
+    background-image: linear-gradient(45deg, #fefefe5e, rgba(255, 255, 255, 0.663)), url('images/bgcover.avif'); background-size: cover; background-position: center!important;
 }
