--- a/style.css
+++ b/style.css
@@ -1,14 +1,6 @@
 body{
-    background-image: linear-gradient(45deg, #fefefe5e, rgba(255, 255, 255, 0.663)), url('images/bgcover.avif') repeat;
-     /* background-size: cover;  */
-     /* background-position: center!important; */
-     animation: moveBackground 30s linear infinite;
+    background-image: linear-gradient(45deg, #fefefe5e, rgba(255, 255, 255, 0.663)), url('images/bgcover.avif');
+     background-size: cover; 
+     background-position: center!important;
+     
 }
-@keyframes moveBackground {
-    0% {
-      background-position: 0 0;
-    }
-    100% {
-      background-position: 1050px 1200px;
-    }
-  }
